add simple write-read-test